<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

  <ImageView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_above="@id/sign_in_layout"
      android:layout_alignParentTop="true"

      android:layout_centerHorizontal="true"
      android:src="@drawable/logo_temp" />

  <LinearLayout
      android:id="@+id/sign_in_layout"
      android:layout_width="match_parent"
      android:layout_height="365dp"
      android:layout_alignParentBottom="true"
      android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingBottom="5dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

      <EditText
          android:id="@+id/email_editText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"

          android:autofillHints="Enter your email address"
          android:background="@drawable/rounded_square"
          android:hint="@string/email"
          android:inputType="textEmailAddress"
          tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

      <EditText
          android:id="@+id/password_editText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"

          android:autofillHints="Enter your password"
          android:background="@drawable/rounded_square"
          android:hint="@string/password"
          android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/sign_up"

        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="end"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_up_email" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/email_login_button"
        style="@style/RoundedButton"
        android:layout_width="match_parent"

        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"

        android:layout_marginTop="14dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="35dp"
        android:text="@string/sign_in_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/facebook_login_button"

        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"

        android:background="@drawable/btn_signin_facebook"
        android:text="@string/signin_facebook" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/google_login_button"

        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="80dp"

        android:background="@drawable/btn_signin_google"
        android:text="@string/signin_google" />
  </LinearLayout>

</RelativeLayout>